<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_splash_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:fontFamily="sans-serif-black"
        android:padding="16dp"
        android:text="@string/verification_code"
        android:textColor="@color/black"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold" />

    <TextView
        android:textSize="@dimen/_13ssp"
        android:id="@+id/validationStr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_50sdp"
        android:text="@string/verification_code_subtext"
        android:textAlignment="center"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/otp_1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/edit_text_background"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/otp_2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/edit_text_background"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/otp_3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/edit_text_background"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/otp_4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/edit_text_background"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/black" />

    </LinearLayout>

    <Button
        android:id="@+id/validate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/purple_700"
        android:text="@string/txtVerify"
        android:textColor="@android:color/white" />
</LinearLayout>
