<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/btnAdd"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:id="@+id/borderType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_border"
                app:layout_constraintTop_toTopOf="parent">

                <Spinner
                    android:id="@+id/spType"
                    style="@style/Widget.AppCompat.DropDownItem.Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawSelectorOnTop="true"
                    android:entries="@array/address_type_array"
                    android:padding="@dimen/_10sdp"
                    app:layout_constraintTop_toTopOf="parent" />

            </RelativeLayout>

            <EditText
                android:maxLines="2"
                android:id="@+id/edtAddress1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/address_line_1"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@+id/borderType" />

            <EditText
                android:maxLines="2"
                android:id="@+id/edtAddress2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/address_line_2"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@+id/edtAddress1" />

            <RelativeLayout
                android:id="@+id/borderState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/spinner_border"
                app:layout_constraintTop_toBottomOf="@+id/edtAddress2">

                <Spinner
                    android:id="@+id/spState"
                    style="@style/Widget.AppCompat.DropDownItem.Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawSelectorOnTop="true"
                    android:entries="@array/state_array"
                    android:padding="@dimen/_10sdp"
                    app:layout_constraintTop_toTopOf="parent" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/borderCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/spinner_border"
                app:layout_constraintTop_toBottomOf="@+id/borderState">

                <Spinner
                    android:id="@+id/spCity"
                    style="@style/Widget.AppCompat.DropDownItem.Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawSelectorOnTop="true"
                    android:entries="@array/city_array"
                    android:padding="@dimen/_10sdp"
                    app:layout_constraintTop_toTopOf="parent" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/borderArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/spinner_border"
                app:layout_constraintTop_toBottomOf="@+id/borderCity">

                <Spinner
                    android:id="@+id/spArea"
                    style="@style/Widget.AppCompat.DropDownItem.Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawSelectorOnTop="true"
                    android:entries="@array/area_array"
                    android:padding="@dimen/_10sdp"
                    app:layout_constraintTop_toTopOf="parent" />
            </RelativeLayout>

            <EditText
                android:id="@+id/edtLandMark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/landmark"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@+id/borderArea" />

            <EditText
                android:id="@+id/edtPinCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/txtPinCode"
                android:inputType="number"
                android:lines="1"
                android:maxEms="6"
                app:layout_constraintTop_toBottomOf="@+id/edtLandMark" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20sdp"
        android:text="@string/txtAdd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>